@@ -2,6 +2,7 @@
  * Support multiple folders for user defined compaction tasks (CASSANDRA-11765)
  * Fix race in CompactionStrategyManager's pause/resume (CASSANDRA-11922)
 Merged from 3.x:
+ * Avoid sstable corrupt exception due to dropped static column (CASSANDRA-12582)
  * NullPointerException during compaction on table with static columns (CASSANDRA-12336)
  * NullPointerExpception when reading/compacting table (CASSANDRA-11988)
 Merged from 3.0:
